<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">Umanji</string>

    <!-- Action Button -->
    <string name="action_settings">설정</string>
    <string name="action_map">지도</string>
    <string name="action_confirm">확인</string>

    <!-- Activity Title -->
    <string name="activity_main">우만지</string>
    <string name="activity_building">빌딩</string>
    <string name="activity_signup">회원가입</string>
    <string name="activity_signin">로그인</string>
    <string name="activity_post">포스트</string>
    <string name="activity_write">포스트 작성</string>
    <string name="activity_comment">댓글</string>
    <string name="activity_profile">프로필</string>
    <string name="activity_edit">프로필 관리</string>
    <string name="activity_wallet">보유 금액</string>
    <string name="activity_create_group">그룹만들기</string>
    <string name="activity_payment">송금 및 결제</string>
    <string name="activity_buy_dw">화폐 구입</string>

    <!--Payment-->
    <string name="txt_receiver_title">받는사람 : </string>
    <string name="txt_receiver">받는사람 ex) 01012341234 </string>
    <string name="btn_search">검색</string>
    <string name="txt_send_amount_title">송금 예정 금액 : 10,000 </string>
    <string name="btn_money_send">송 금</string>
    <string name="txt_buy_dw_title">구매 금액 : </string>
    <string name="et_buy_dw_amount">1,000,000</string>
    <string name="btn_buy_dw_submit">충전 신청하기</string>
    <string name="txt_send_amount">10,000</string>
    <string name="txt_unit">DW</string>
    <string name="txt_instruction">이 곳을 누르면 송금창으로 이동합니다</string>
    <string name="txt_transaction_header">거래내역</string>
    <string name="txt_buy_subject">결제금액</string>
    <string name="txt_buy_bank_name">KB국민은행</string>
    <string name="txt_buy_bank_account">811402-04-206370</string>
    <string name="txt_buy_bank_account_name">양현숙</string>
    <string name="txt_buy_request_date">2018.03.09</string>
    <string name="txt_buy_request_d_day">2018.03.12</string>
    <string name="et_pay_content">송금내역</string>


    <!-- Tab Title -->
    <string name="title_fragment_town">동네</string>
    <string name="title_fragment_district">구군</string>
    <string name="title_fragment_province">시도</string>
    <string name="title_fragment_nation">국가</string>
    <string name="title_fragment_world">세계</string>

    <string name="title_building_plaza">광장</string>
    <string name="title_building_member">시민</string>
    <string name="title_building_channel">채널</string>
    <string name="title_building_info">세부정보</string>
    <string name="title_building_setting">설정</string>

    <string name="title_post">포스트</string>
    <string name="title_popular_place">인기장소</string>
    <string name="title_community">단체</string>
    <string name="title_people">사람들</string>
    <string name="title_facility">시설</string>
    <string name="title_floor_info">층정보</string>
    <string name="title_property">총재산</string>
    <string name="title_detail_info">상세정보</string>

    <!-- Menu Title -->
    <string name="menu_home">우만지 홈</string>
    <string name="menu_post">내 포스트</string>
    <string name="menu_wallet">지갑</string>
    <string name="menu_profile">프로필 관리</string>
    <string name="menu_setting">설정</string>

    <!-- Error message -->
    <string name="required_network">인터넷 연결 필요</string>
    <string name="required_login">로그인 필요</string>
    <string name="unstable_server">서버와의 연결이 불안정합니다</string>
    <string name="no_connection_to_server">서버와 연결할 수 없습니다</string>
    <string name="required_form">입력해주세요</string>
    <string name="required_content">내용을 입력해주세요</string>
    <string name="required_group_name">그룹이름을 입력해주세요</string>
    <string name="invalid_form">형식이 올바르지 않습니다</string>
    <string name="short_password">6자리 이상 입력해주세요</string>
    <string name="not_match">일치하지 않습니다</string>
    <string name="not_match_id_or_password">아이디 없거나 패스워드가 일치하지 않습니다</string>
    <string name="no_receiver">받는 사람이 없습니다</string>
    <string name="excess_money">예산 초과</string>

    <!-- Edit text hint -->
    <string name="hint_user_name">사용자 이름</string>
    <string name="hint_email">이메일</string>
    <string name="hint_phone">핸드폰</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_password_confirm">비밀번호 확인</string>

    <!-- Map marker string -->
    <string name="please_move_marker">옮겨주세요</string>
    <string name="please_click_to_create_post">포스트를 작성할려면 클릭해주세요</string>
    <string name="question_creating_post">%s에 포스트를 작성하시겠습니까?</string>

    <!-- SignInActivity & SignUpActivity & MainActivity -->
    <string name="welcome">환 영 합 니 다.</string>
    <string name="signup">회원가입</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="first_time">처음이신가요?</string>

    <!-- Post related -->
    <string name="portal">%s 정보센터</string>
    <string name="post_title">%s님이 %s에서 작성함.</string>

    <!-- Group related -->

    <!-- Test -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="content">[월요신문=고은별 기자] 국내 구강청결제 대표제품 ‘가그린’. 동아제약의 가그린이 광고모델인 배우 박보영을 발판 삼아 매출액 상승 곡선을 그리고 있다.

8일 관련업계 등에 따르면 가그린의 지난해 하반기(7~12월) 매출액은 전년(2016년) 하반기와 비교해 약 30% 가량 신장했다. 2016년 하반기 97억원이던 판매액이 지난해 같은 기간 약 124억원으로 늘어난 것이다. 지난해 6월 발탁한 모델 박보영의 광고 효과가 매출 상승에도 영향을 준 것으로 업계는 해석하고 있다.

전체 판매량으로 비교해도 2016년 총 204억원이던 가그린 매출액은 지난해 11월까지를 기준으로 약 202억원, 12월까지 집계했을 경우 약 223~224억원 정도가 될 것으로 예상되고 있다. 전년인 2016년도와 비교해서도 지난해 약 10% 가량 성장세를 보이고 있는 상황이다.</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At varius vel pharetra vel turpis nunc eget. Posuere morbi leo urna molestie at. Massa eget egestas purus viverra accumsan in. Est lorem ipsum dolor sit amet consectetur adipiscing. Cras sed felis eget velit aliquet sagittis id consectetur purus. Sit amet tellus cras adipiscing enim eu. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Vestibulum mattis ullamcorper velit sed ullamcorper morbi. Cras tincidunt lobortis feugiat vivamus at augue eget arcu. Duis ultricies lacus sed turpis. Et netus et malesuada fames ac turpis egestas integer. Ut enim blandit volutpat maecenas volutpat blandit. Orci porta non pulvinar neque. Tincidunt tortor aliquam nulla facilisi cras.

Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Varius duis at consectetur lorem donec. Aliquet porttitor lacus luctus accumsan tortor. Ac auctor augue mauris augue neque gravida in fermentum. Duis at consectetur lorem donec massa sapien faucibus et. Ornare suspendisse sed nisi lacus sed. Proin fermentum leo vel orci porta non pulvinar. Tincidunt eget nullam non nisi est sit amet facilisis. Arcu dictum varius duis at consectetur lorem donec massa. Accumsan sit amet nulla facilisi morbi. Quam pellentesque nec nam aliquam sem. Gravida in fermentum et sollicitudin ac. Quam id leo in vitae turpis massa. Id velit ut tortor pretium. Sagittis orci a scelerisque purus semper eget duis at tellus. Ut pharetra sit amet aliquam. Commodo nulla facilisi nullam vehicula ipsum a arcu cursus. Nunc non blandit massa enim nec dui. Enim nunc faucibus a pellentesque sit amet porttitor.

Pharetra vel turpis nunc eget lorem dolor sed. Mi sit amet mauris commodo quis. Placerat duis ultricies lacus sed turpis tincidunt id aliquet risus. Tempor orci eu lobortis elementum nibh tellus. Libero id faucibus nisl tincidunt eget nullam. Vitae auctor eu augue ut lectus arcu bibendum at varius. Sed viverra ipsum nunc aliquet bibendum enim facilisis. Id donec ultrices tincidunt arcu non. At ultrices mi tempus imperdiet nulla. Ultricies lacus sed turpis tincidunt id aliquet risus. Vivamus arcu felis bibendum ut. Turpis nunc eget lorem dolor sed viverra. Et ligula ullamcorper malesuada proin libero nunc consequat interdum varius. Ipsum suspendisse ultrices gravida dictum fusce. Consequat mauris nunc congue nisi vitae suscipit tellus. Nibh cras pulvinar mattis nunc sed blandit libero volutpat sed.</string>
</resources>
