<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/constraint_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.sign.SigninActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme"
        app:subtitleTextColor="@color/text_black"
        app:title="@string/activity_signin"
        app:titleTextColor="@color/text_black" />

    <include layout="@layout/toolbar_progress" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/bg_menu_gray"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/email_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/form_text_margin"
                android:layout_marginRight="@dimen/form_text_margin"
                app:layout_constraintBottom_toTopOf="@+id/password_layout"
                app:layout_constraintTop_toBottomOf="@+id/welcome">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/form_text_height"
                    android:hint="@string/hint_email"
                    android:inputType="textWebEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/form_text_margin"
                android:layout_marginRight="@dimen/form_text_margin"
                app:layout_constraintBottom_toTopOf="@+id/find_password"
                app:layout_constraintTop_toBottomOf="@+id/email_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/form_text_height"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/find_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/form_text_margin"
                android:layout_marginRight="@dimen/form_text_margin"
                android:background="?android:selectableItemBackground"
                android:text="@string/find_password"
                android:textColor="@color/bg_menu_gray"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/login"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_layout" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/form_text_height"
                android:layout_marginLeft="@dimen/form_text_margin"
                android:layout_marginRight="@dimen/form_text_margin"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_rounded_rect"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/first_time"
                app:layout_constraintTop_toBottomOf="@+id/find_password" />

            <TextView
                android:id="@+id/first_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/first_time"
                android:textColor="@color/bg_menu_gray"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/signup"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_time" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>