<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_buy_dw"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme"
        app:elevation="0dp"
        app:popupTheme="@style/AppTheme"
        app:subtitleTextColor="@color/text_black"
        app:title="@string/activity_buy_dw"
        app:titleTextColor="@color/text_black" />

    <ScrollView
        android:id="@+id/sv_payment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_buy_dw">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:id="@+id/divider1"
                android:layout_width="368dp"
                android:layout_height="1dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_buy_dw_amount"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_buy_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_buy_subject"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />

            <TextView
                android:id="@+id/txt_buy_dw_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_buy_dw_title"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_buy_dw_amount"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp"
                android:ems="10"
                android:hint="@string/et_buy_dw_amount"
                android:inputType="number"
                android:textAlignment="viewEnd"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txt_buy_dw_title"
                app:layout_constraintEnd_toStartOf="@+id/txt_unit"
                app:layout_constraintStart_toEndOf="@+id/txt_buy_dw_title" />

            <Button
                android:id="@+id/btn_buy_dw_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/btn_buy_dw_submit"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/txt_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/txt_unit"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/et_buy_dw_amount"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/txt_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="5,000,000"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/txt_buy_subject"
                app:layout_constraintTop_toTopOf="@+id/txt_buy_subject" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="원"
                android:textSize="17sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txt_amount"
                app:layout_constraintStart_toEndOf="@+id/txt_amount" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="입금은행정보"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_buy_subject" />

            <TextView
                android:id="@+id/txt_buy_subject_bank_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="입금은행"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/txt_bank_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_buy_bank_name"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@+id/txt_amount"
                app:layout_constraintTop_toTopOf="@+id/txt_buy_subject_bank_name" />

            <TextView
                android:id="@+id/txt_subject_buy_bank_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="입금계좌번호"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_buy_subject_bank_name" />

            <TextView
                android:id="@+id/txt_buy_bank_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_buy_bank_account"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@+id/txt_bank_name"
                app:layout_constraintTop_toTopOf="@+id/txt_subject_buy_bank_account" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="입금계좌명"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_subject_buy_bank_account" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_buy_bank_account_name"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@+id/txt_buy_bank_account"
                app:layout_constraintTop_toTopOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="결제요청일"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/txt_buy_request_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_buy_request_date"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="입금기한일"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_buy_request_d_day"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@+id/txt_buy_request_date"
                app:layout_constraintTop_toTopOf="@+id/textView13" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>