<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_wallet"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme"
        app:subtitleTextColor="@color/text_black"
        app:title="@string/activity_wallet"
        app:titleTextColor="@color/text_black" />

    <ImageView
        android:id="@+id/btn_money_send"
        style="?android:borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_wallet"
        app:srcCompat="@color/bg_base" />

    <TextView
        android:id="@+id/tv_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/five_bill"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_money_send"
        app:layout_constraintEnd_toEndOf="@+id/btn_money_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_money_send" />

    <TextView
        android:id="@+id/txt_currency_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="DW"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_money"
        app:layout_constraintEnd_toEndOf="@+id/tv_money" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_transaction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="LinearLayoutManager"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        tools:ignore="MissingConstraints" />

    <!--tools:listitem="@layout/item_wallet"-->

    <TextView
        android:id="@+id/txt_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_instruction"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_money_send"
        app:layout_constraintEnd_toEndOf="@+id/btn_money_send"
        app:layout_constraintStart_toStartOf="@+id/btn_money_send"
        app:layout_constraintTop_toBottomOf="@+id/tv_money" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_money_send"
        app:srcCompat="@color/bg_gray" />

    <TextView
        android:id="@+id/txt_transaction_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_transaction_header"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

</android.support.constraint.ConstraintLayout>